# UAS_SEM2_ALPRO

./: CMakeLists.txt  LandingPage.qml  Main.qml  UserDashboard.qml  hotelbackend.cpp  hotelbackend.h  main.cpp  readme.md
